# kasper-resale-project

./: .gitignore
kasper-api/: Dockerfile  Makefile  Readme.MD  pyproject.toml
kasper-api/migrations/: env.py
kasper-api/migrations/versions/: 03d583d4543a_.py  175755bc7f88_.py  28782b31d071_.py  50f8f382cbe9_.py  5fbf90f5dc4e_.py  a55c662c8878_.py  b478987f289c_.py  f1461a19ae5d_.py  f2724565bcd1_.py
kasper-api/scripts/: application.py
kasper-api/src/: application.py  schemas.py
kasper-api/src/data/: config.py
kasper-api/src/database/: connection.py  models.py
kasper-api/src/routers/: adverts.py  categories.py  dormitories.py  universities.py  users.py
kasper-project-bot/: .env.dist  bot.py  requirements.txt  telebot.service
kasper-project-bot/data/: config.py
kasper-project-bot/handlers/admin/: __init__.py  menu.py
kasper-project-bot/handlers/user/: __init__.py  menu.py  settings.py  start.py
kasper-project-bot/keyboards/user/: inline.py
kasper-project-bot/services/: adverts.py  categories.py  defaults.py  dormitory.py  universities.py  users.py
kasper-project-bot/states/: default.py
